testsuite/tests/grammar/warn_imprecise/test.out
test.py:16: error: Specified type is FooNode, but it could be more specific: Name
test.py:20: error: Specified type is FooNode, but it could be more specific: VarKeyword
Code generation was successful
Done
